Added Java lib for GitHub API access